# dexory-task

./: .aderc
ade/: Dockerfile  entrypoint  env.sh
dex_controller/: Doxyfile  README.md  package.xml
dex_controller/docs/html/: annotated.html  classdex__controller_1_1DexController-members.html  classdex__controller_1_1DexController.html  classdex__controller_1_1DexController__coll__graph.map  classdex__controller_1_1DexController__coll__graph.md5  classdex__controller_1_1DexController__inherit__graph.map  classdex__controller_1_1DexController__inherit__graph.md5  classdex__controller_1_1SimplePID-members.html  classdex__controller_1_1SimplePID.html  classes.html  dex__controller_8hpp_source.html  dir_140544c5ad327ff26a9c1c9e198eadb1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  simple__pid_8hpp_source.html
dex_controller/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
dex_controller/docs/latex/: annotated.tex  classdex__controller_1_1DexController.tex  classdex__controller_1_1DexController__coll__graph.md5  classdex__controller_1_1DexController__inherit__graph.md5  classdex__controller_1_1SimplePID.tex  hierarchy.tex  refman.tex
dex_controller/include/dex_controller/: simple_pid.hpp
dex_controller/src/: dex_controller.cpp
dex_controller/test/: simple_pid_tests.cpp
dex_ws/src/dex_solution/dex_bringup/params/: dex_controller_params.yaml
dex_ws/src/dex_solution/dex_controller/: CMakeLists.txt  README.md  dex_controller.xml
dex_ws/src/dex_solution/dex_controller/include/dex_controller/: dex_controller.hpp
dex_ws/src/dex_solution/dex_controller/launch/: dex_controller_launch.py  navigation_launch.py
dex_ws/src/dex_solution/dex_controller/params/: dex_controller_params.yaml
dex_ws/src/dex_solution/dex_controller/test/: CMakeLists.txt  dex_controller_tests.cpp
